# python-web-development-project-lvl4

./: .gitignore  Makefile  README.md  env.example  pyproject.toml  requirements.txt  setup.cfg
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: __init__.py  custom_views.py  settings.py  tests.py  urls.py  views.py
task_manager/labels/: __init__.py  admin.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: __init__.py  admin.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: __init__.py  admin.py  forms.py  models.py  tasks_filter.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_rename_tasks_executor_task_executor.py
task_manager/templates/: main_page.html
task_manager/templates/labels/: label_create.html  label_delete.html  label_update.html  labels_list.html
task_manager/templates/layout/: basic.html
task_manager/templates/statuses/: status_create.html  status_delete.html  status_update.html  statuses_list.html
task_manager/templates/tasks/: task_create.html  task_delete.html  task_details.html  task_update.html  tasks_list.html
task_manager/templates/users/: user_delete.html  user_login.html  user_logout.html  user_register.html  user_update.html  users_list.html
task_manager/users/: __init__.py  admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  (+1 more)
