[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Magicbuka <magicbuka@mail.ru>"]
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
python-dotenv = "^0.20.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^22.1"
django-filter = "^21.1"
rollbar = "^0.16.2"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
coverage = "^6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
